--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,285 +1,286 @@
-2021-02-23 <strike>龍谷大.通信工学分野</strike> #jobhunt due:2020-06-01
-2021-02-23 <strike>拓殖大.ソフトウェア工学</strike> #jobhunt due:2020-06-26
-2021-02-23 <strike>同志社大</strike> #jobhunt due:2020-07-15
-2021-02-23 <strong>中央大</strong> #jobhunt due:2020-07-15
-2021-02-23 <strike>千葉商科大.情報・メディア</strike> #jobhunt due:2020-07-17
-2021-02-23 <strike>千葉商科大</strike> #jobhunt due:2020-07-17
-2021-02-23 <strike>近畿大情報セキュリティ評価✘推薦書</strike> #jobhunt due:2020-07-20
-2021-02-23 <strike>東京大(missed13日締切)</strike> #jobhunt due:2020-07-21
-2021-02-23 <strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike> #fundhunt due:2020-07-22
-2021-02-23 <strike>慶應義塾.情報工学分野✘推薦書</strike> #jobhunt due:2020-07-24
-2021-02-23 <strong>滋賀大✌email↓rejectletter</strong> #jobhunt due:2020-07-30
-2021-02-23 <strike>九州国際大.情報学基礎✘badformat</strike> #jobhunt due:2020-07-31
-2021-02-23 <strike>岡山理科大(ous).人工知能✘toomuchwork+morelater</strike> #jobhunt due:2020-07-31
-2021-02-23 <strike>法政大.信号処理、統計、計測、機械学習分野✘推薦書</strike> #jobhunt due:2020-07-31
-2021-02-23 <strong>名古屋大.人間情報学★教授</strong> #jobhunt due:2020-07-31
-2021-02-23 <strong>埼玉工業大.情報学★エクセル業績</strong> #jobhunt due:2020-07-31
-2021-02-23 <strike>国土技術政策総合研究所・データ結合999.999.999千円</strike> #fundhunt due:2020-08-05
-2021-02-23 <strong>三重大.知能工学講座・データサイエンス2jobs</strong> #jobhunt due:2020-08-12
-2021-02-23 <strike>NAIST.ロボティクス分野</strike> #jobhunt due:2020-08-17
-2021-02-23 <strong>筑波大</strong> #jobhunt due:2020-08-17
-2021-02-23 <strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs✘推薦書</strike> #jobhunt due:2020-08-19
-2021-02-23 <strong>岡山県立大.知覚情報処理</strong> #jobhunt due:2020-08-19
-2021-02-23 <strong>玉川大学.国際教養学科✌jrec</strong> #jobhunt due:2020-08-21
-2021-02-23 <strong>龍谷大学・通信工学分野★給料明記</strong> #jobhunt due:2020-08-21
-2021-02-23 <strong>中京大.コンピュータ処理論及び関連科目</strong> #jobhunt due:2020-08-24
-2021-02-23 <strike>日本大.ロボット・制御✘mismatch</strike> #jobhunt due:2020-08-25
-2021-02-23 <strong>大阪大学.社会イノベーション部門</strong> #jobhunt due:2020-08-25
-2021-02-23 <strike>和光大学.情報の基礎✖too much work</strike> #jobhunt due:2020-08-28
-2021-02-23 <strong>広島工業大・経営情報システム✌jrec</strong> #jobhunt due:2020-08-28
-2021-02-23 <strike>京都大.通信情報システム中✘試用</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>岡山理科大(ous).情報数理.情報工学.2posts✘(still)toomuchwork</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>工学院大学.情報学フロンティア-情報学✘推薦書</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>工学院大学.複合領域-デザイン学-総合理工-計算科学</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>日本工業大✘推薦書</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>東京都市大学・経営情報システム</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>東京都立大.情報学基礎.2posts</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>東京電機大.人間情報学✘推薦書</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>株式会社Nextremer.計算科学.quantum</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>滋賀県立大.センシング工学分野</strike> #jobhunt due:2020-08-31
-2021-02-23 <strike>般社団法人CRD</strike> #jobhunt due:2020-08-31
-2021-02-23 <strong>大阪大.情報科学☢試用6カ月✌jrec</strong> #jobhunt due:2020-08-31
-2021-02-23 <strong>岡山大学.サイバーフィジカル情報の応用研究</strong> #jobhunt due:2020-08-31
-2021-02-23 <strong>東京都市大学・情報学</strong> #jobhunt due:2020-08-31
-2021-02-23 <strong>立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース★english</strong> #jobhunt due:2020-08-31
-2021-02-23 <strong>駒澤大.情報分野✌jrec</strong> #jobhunt due:2020-08-31
-2021-02-23 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2021-02-23 <strike>明治大✘推薦書</strike> #jobhunt due:2020-09-07
-2021-02-23 <strike>公立はこだて未来大</strike> #jobhunt due:2020-09-10
-2021-02-23 <strike>広島工業大学・情報ネットワーク(did.not.make.it)</strike> #jobhunt due:2020-09-10
-2021-02-23 <strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong> #jobhunt due:2020-09-10
-2021-02-23 <strike>北海道.情報科学研究院</strike> #jobhunt due:2020-09-11
-2021-02-23 <strike>明治大学・統計科学・統計数学・知能情報科学</strike> #jobhunt due:2020-09-11
-2021-02-23 <strong>★金沢大学.IoT及び情報通信分野</strong> #jobhunt due:2020-09-11
-2021-02-23 <strong>法政大学.情報科学部コンピュータ科学科✌freeform✌jrecin</strong> #jobhunt due:2020-09-11
-2021-02-23 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2021-02-23 <strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike> #jobhunt due:2020-09-14
-2021-02-23 <strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike> #jobhunt due:2020-09-14
-2021-02-23 <strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong> #jobhunt due:2020-09-14
-2021-02-23 <strike>岡山大学.ハードウェア.ソフトウェア</strike> #jobhunt due:2020-09-15
-2021-02-23 <strong>青山学院大.情報社会科学✌freeform</strong> #jobhunt due:2020-09-15
-2021-02-23 <strike>京都先端科学大学・統計やビジネスデータの見方</strike> #jobhunt due:2020-09-18
-2021-02-23 <strike>東京電機大学・情報学部門</strike> #jobhunt due:2020-09-18
-2021-02-23 <strong>▲長岡技術科学大.情報・経営システム工学専攻</strong> #jobhunt due:2020-09-18
-2021-02-23 <strike>松本大学.データサイエンス.情報学-データサイエンス</strike> #jobhunt due:2020-09-20
-2021-02-23 <strike>法政大学.情報学・計算基盤(picked.another.200911)</strike> #jobhunt due:2020-09-21
-2021-02-23 <strike>岐阜聖徳学園大学・情報学</strike> #jobhunt due:2020-09-23
-2021-02-23 <strike>▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野☢福島</strike> #jobhunt due:2020-09-25
-2021-02-23 <strike>★東京理科大.数理モデリング、知能数理分野</strike> #jobhunt due:2020-09-25
-2021-02-23 <strike>岩手県立大.人工知能コース</strike> #jobhunt due:2020-09-25
-2021-02-23 <strike>東京大学.高性能計算地球科学分野</strike> #jobhunt due:2020-09-25
-2021-02-23 <strong>▲成蹊大学.総合理工-計算科学-数物系科学</strong> #jobhunt due:2020-09-25
-2021-02-23 <strike>岡山大学・知能機械システム学講座</strike> #jobhunt due:2020-09-28
-2021-02-23 <strike>▲成蹊大.計算科学(1of2)</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>▲静岡理工科大学.電子情報分野(smalluni)</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>兵庫県立大学.AI・IoT・ビックデータ</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>兵庫県立大学・情報通信工学</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>北海道大学.数理科学・応用数学分野</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>名城大学・情報学、統計学、フィールド調査</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>岡山大学・電気電子機能開発・powerelec</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike> #jobhunt due:2020-09-30
-2021-02-23 <strike>熊本大学・ビッグデータ</strike> #jobhunt due:2020-09-30
-2021-02-23 <strong>‼★公立はこだて未来大学・情報システム</strong> #jobhunt due:2020-09-30
-2021-02-23 <strong>▲東京都市大学・情報理論</strong> #jobhunt due:2020-09-30
-2021-02-23 <strong>★龍谷大学・情報科学分野</strong> #jobhunt due:2020-09-30
-2021-02-23 <strong>福岡大.情報学</strong> #jobhunt due:2020-09-30
-2021-02-23 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2021-02-23 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2021-02-23 <strike>明星大.データアナリティクス✘推薦書</strike> #jobhunt due:2020-10-02
-2021-02-23 <strike>東洋大学・情報社会の総合政策</strike> #jobhunt due:2020-10-08
-2021-02-23 <strike>立命館大学.システム制御工学.無線通信・電波</strike> #jobhunt due:2020-10-09
-2021-02-23 <strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike> #jobhunt due:2020-10-12
-2021-02-23 <strike>FIT.制御・計測に関連する分野</strike> #jobhunt due:2020-10-16
-2021-02-23 <strike>大阪大学大学院・情報科学研究科✘probation</strike> #jobhunt due:2020-10-16
-2021-02-23 <strike>愛知工科大学・組込み系システム</strike> #jobhunt due:2020-10-16
-2021-02-23 <strike>東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</strike> #jobhunt due:2020-10-16
-2021-02-23 <strike>石川県工業試験場・電気職</strike> #jobhunt due:2020-10-16
-2021-02-23 <strong>千葉経済大学・情報学分野</strong> #jobhunt due:2020-10-16
-2021-02-23 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
-2021-02-23 <strong>玉川大学・ソフトウェアサイエンス学科</strong> #jobhunt due:2020-10-19
-2021-02-23 <strike>東京工業大学・情報通信における応用AI分野</strike> #jobhunt due:2020-10-23
-2021-02-23 <strike>成城大学・経営統計学✘bad format</strike> #jobhunt due:2020-10-29
-2021-02-23 <strike>茨城キリスト教大学・経営情報分野</strike> #jobhunt due:2020-10-30
-2021-02-23 <strike>足利大学・人工知能</strike> #jobhunt due:2020-10-30
-2021-02-23 <strike>足利大学・情報工学、情報科学センター</strike> #jobhunt due:2020-10-30
-2021-02-23 <strike>香川大学・機械システム</strike> #jobhunt due:2020-10-30
-2021-02-23 <strike>高知大学・情報工学</strike> #jobhunt due:2020-10-30
-2021-02-23 <strong>公立小松大学・データマイニング・機械学習・データ科学関連分野</strong> #jobhunt due:2020-10-30
-2021-02-23 <strong>福岡工業大</strong> #jobhunt due:2020-10-30
-2021-02-23 <strike>久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械</strike> #jobhunt due:2020-11-04
-2021-02-23 <strong>お茶の水女子大学・人間工学（ロボット工学、生体工学）</strong> #jobhunt due:2020-11-04
-2021-02-23 <strong>名古屋市立大学・情報環境デザイン領域</strong> #jobhunt due:2020-11-05
-2021-02-23 <strike>近畿大学・情報セキュリティ教育(講師or助教)</strike> #jobhunt due:2020-11-06
-2021-02-23 <strike>三重大学大学院工学研究科・知能工学講座★再公募</strike> #jobhunt due:2020-11-09
-2021-02-23 <strike>公立千歳科学技術大学・情報システム工学科(任期)</strike> #jobhunt due:2020-11-10
-2021-02-23 <strike>香川大学・情報システム・セキュリティコース✘講師以下</strike> #jobhunt due:2020-11-13
-2021-02-23 <strike>白百合女子大学・情報教育・プログラミング教育・ICT教育‼調布・推薦</strike> #jobhunt due:2020-11-14
-2021-02-23 <strike>滋賀県立大学・知能情報工学分野・データサイエンス‼エクセルCV</strike> #jobhunt due:2020-11-18
-2021-02-23 <strike>岡山理科大学・計算機工学・コンピュータシステム分野✘toomuchwork</strike> #jobhunt due:2020-11-20
-2021-02-23 <strike>香川大学・情報通信コース</strike> #jobhunt due:2020-11-20
-2021-02-23 <strike>広島大学・情報メディア教育研究センター</strike> #jobhunt due:2020-11-24
-2021-02-23 <strike>九州大学・ロシア語担当</strike> #jobhunt due:2020-11-26
-2021-02-23 <strike>京都大学・国際高等教育院附属データ科学イノベーション教育研究センター</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>信州大学.通信システム分野(助教)</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>名古屋商科大学・情報(nolab)</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>岐阜大学・数理・データサイエンス</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>岡山理科大学・データサイエンス</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>東京大学・人間エネルギー環境学分野</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>金沢大学・先端科学・社会共創推進機構</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>金沢大学・先端科学・社会共創推進機構・人材育成グループ</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>長岡技術科学大学・情報・経営システム工学(better.at.1204)</strike> #jobhunt due:2020-11-30
-2021-02-23 <strike>東京工業大学・ソフトウェア工学分野</strike> #jobhunt due:2020-12-01
-2021-02-23 <strike>広島工業大学・コンピュータシステム</strike> #jobhunt due:2020-12-03
-2021-02-23 <strike>岩手大学・情報基盤センター</strike> #jobhunt due:2020-12-04
-2021-02-23 <strong>九州国際大学・ビジネスデータ分析</strong> #jobhunt due:2020-12-04
-2021-02-23 <strong>長岡技術科学大学・情報通信制御システム工学講座</strong> #jobhunt due:2020-12-04
-2021-02-23 <strike>東京都市大学・情報科学科・計算機工学分野</strike> #jobhunt due:2020-12-05
-2021-02-23 <strike>東京電機大学・情報システムデザイン</strike> #jobhunt due:2020-12-05
-2021-02-23 <strike>神奈川工科大学・情報学部・情報メディア学科</strike> #jobhunt due:2020-12-06
-2021-02-23 <strike>データ同化研究チーム</strike> #jobhunt due:2020-12-08
-2021-02-23 <strike>名古屋大学・システム研究所未来エレクトロニクス集積研究センター</strike> #jobhunt due:2020-12-09
-2021-02-23 <strike>九州産業大学理工学部・機械工学科・メカトロニクス</strike> #jobhunt due:2020-12-11
-2021-02-23 <strike>東京通信大学・情報システム分野</strike> #jobhunt due:2020-12-14
-2021-02-23 <strike>静岡理工科大学・電子情報分野</strike> #jobhunt due:2020-12-14
-2021-02-23 <strike>琉球大学・総合情報処理センター</strike> #jobhunt due:2020-12-15
-2021-02-23 <strike>千葉大学・情報工学・画像工学・医工学</strike> #jobhunt due:2020-12-16
-2021-02-23 <strike>NAIST・情報科学領域・コンピューティング・アーキテクチャ分野</strike> #jobhunt due:2020-12-18
-2021-02-23 <strike>立正大学・環境情報学・環境科学分野</strike> #jobhunt due:2020-12-18
-2021-02-23 <strike>東日本国際大学・情報学</strike> #jobhunt due:2020-12-30
-2021-02-23 <strike>リージョナルフィッシュ株式会社・ゲノム編集水産育種のバイオインフォマティクス研究員の募集【リモートワーク可】</strike> #jobhunt due:2020-12-31
-2021-02-23 <strike>足利大学工学部・機械分野【再公募】</strike> #jobhunt due:2021-01-08
-2021-02-23 <strike>新潟大学・システムソフトウェア・並列分散処理</strike> #jobhunt due:2021-01-14
-2021-02-23 <strike>東京工業大学・理論計算機科学・サイバーセキュリティ分野</strike> #jobhunt due:2021-01-17
-2021-02-23 <strike>足利大学・工学部・教員の公募（人工知能関連分野）【再公募】</strike> #jobhunt due:2021-01-29
-2021-02-23 <strike>足利大学・工学部・教員の公募（情報工学、情報科学センター）【再公募】</strike> #jobhunt due:2021-01-29
-2021-02-23 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
-2021-02-23 <strike>金城学院大学・生活環境学部生活マネジメント学科・専任教員の公募（情報学）</strike> #jobhunt due:2021-02-01
-2021-02-23 <strike>静岡理工科大学・講師・准教授・または教授の公募（電子機械制御分野）</strike> #jobhunt due:2021-02-01
-2021-02-23 ●静岡理工科大学（ソフトウェア開発を基盤とする、知能情報や感性情報処理に関連する分野） #jobhunt due:2021-02-01
-2021-02-23 <strike>日本大学・専任教員（教授）の公募（データサイエンス関連科目）</strike> #jobhunt due:2021-02-05
-2021-02-23 <strong>名古屋大学・行動信号処理分野</strong> #jobhunt due:2021-02-05
-2021-02-23 <strike>東京工業大学・教授の公募（ソフトウェア工学分野）</strike> #jobhunt due:2021-02-09
-2021-02-23 <strong>中央学院大学・情報数学他</strong> #jobhunt due:2021-02-12
-2021-02-23 (J)MDPI.electronics.deepleaning #deadlines due:2021-02-15
-2021-02-23 (J)MDPI.sensors.internet.of.things #deadlines due:2021-02-15
-2021-02-23 EAI.WiCOM.wireless #deadlines due:2021-02-15
-2021-02-23 IEEE.ACM.IWQoS.qos #deadlines due:2021-02-15
-2021-02-23 IEEE.HPSC.highperfcomp #deadlines due:2021-02-15
-2021-02-23 IEEE.IDS.intelligent.data.sec #deadlines due:2021-02-15
-2021-02-23 IEEE.ISIE.industry.electronics #deadlines due:2021-02-15
-2021-02-23 IEEE.COMPSAC #deadlines due:2021-02-18
-2021-02-23 IEEE.DDINS.datadriven #deadlines due:2021-02-19
-2021-02-23 (J)JCN.covid19 #deadlines due:2021-02-20
-2021-02-23 (J)MDPI.smartcities.traffic.sensors.IoT #deadlines due:2021-02-20
-2021-02-23 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
-2021-02-23 (J)MDPI.mobile.computing #deadlines due:2021-02-21
-2021-02-23 IEEE.ComSoc.CQR.quality.reliablity #deadlines due:2021-02-21
-2021-02-23 IEEE.SECON.sensing.comm.net #deadlines due:2021-02-22
-2021-02-23 LANMAN.networking.is.new.normal #deadlines due:2021-02-22
-2021-02-23 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2021-02-23
-2021-02-23 kindle #current due:2021-02-23
-2021-02-23 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2021-02-23
-2021-02-23 wifi dongle @ home #current due:2021-02-23
-2021-02-23 <strike>大阪大学・機械工学・情報学</strike> #jobhunt due:2021-02-25
-2021-02-23 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
-2021-02-23 ●大和大学（3jobs） #jobhunt due:2021-02-26
-2021-02-23 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
-2021-02-23 <strike>株式会社ベイシスコンサルティング・リサーチャー募集</strike> #jobhunt due:2021-02-28
-2021-02-23 <strike>武庫川女子大学・情報セキュリティ分野</strike> #jobhunt due:2021-02-28
-2021-02-23 <strike>武庫川女子大学・経営情報分野</strike> #jobhunt due:2021-02-28
-2021-02-23 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
-2021-02-23 ★online京都情報大学院大学・情報学分野 #jobhunt due:2021-02-28
-2021-02-23 ★online国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
-2021-02-23 ★online東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
-2021-02-23 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
-2021-02-23 武庫川女子大学・情報ネットワーク分野 #jobhunt due:2021-02-28
-2021-02-23 (J)IEET.green.internet.and.services #deadlines due:2021-03-01
-2021-02-23 (J)Springer.queueing.learning.control #deadlines due:2021-03-01
-2021-02-23 <strike>東京国際工科専門職大学・プログラミング関連</strike> #jobhunt due:2021-03-01
-2021-02-23 <strike>東京国際工科専門職大学・通信・コンピュータ分野</strike> #jobhunt due:2021-03-01
-2021-02-23 IEEE.IFIP.wirelessdays #deadlines due:2021-03-01
-2021-02-23 Springer.dataintensive.cluster #deadlines due:2021-03-01
-2021-02-23 盛岡大学・情報処理 #jobhunt due:2021-03-01
-2021-02-23 (3) docomocycle data collect #regulars due:2021-03-02
-2021-02-23 ① money (weekly) #regulars due:2021-03-02
-2021-02-23 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2021-03-02
-2021-02-23 IEEE.ISIE.industry.elec #deadlines due:2021-03-05
-2021-02-23 audio automation for open campus #midterm due:2021-03-05
-2021-02-23 kgu zemi faces #midterm due:2021-03-05
-2021-02-23 samsung redo cygwin #midterm due:2021-03-05
-2021-02-23 simplify yalms #midterm due:2021-03-05
-2021-02-23 tokyo hotels and schedule #midterm due:2021-03-05
-2021-02-23 video recognition engine (sotsuken) #midterm due:2021-03-05
-2021-02-23 IEEE.FiCloud.iot.cloud #deadlines due:2021-03-10
-2021-02-23 LNCS.mobiwis.mobileweb.intelligentsystems #deadlines due:2021-03-10
-2021-02-23 ficloud.future.cloud #deadlines due:2021-03-10
-2021-02-23 サイエンス・テクノロジー・システムズ株式会社・サイエンティフィック コンサルタント #jobhunt due:2021-03-10
-2021-02-23 公益社団法人国際経済労働研究所・データ分析研究員募集 #jobhunt due:2021-03-11
-2021-02-23 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
-2021-02-23 (J)IEEEWComm.AI.assisted.wcomm #deadlines due:2021-03-15
-2021-02-23 (J)MDPI.drone.swarms #deadlines due:2021-03-15
-2021-02-23 CloudConf.KSEM@tokyo #deadlines due:2021-03-15
-2021-02-23 KSEM.knowledge #deadlines due:2021-03-15
-2021-02-23 神奈川工科大学・情報学部・情報工学科 #jobhunt due:2021-03-15
-2021-02-23 ACM.WiSec.wireless.security #deadlines due:2021-03-18
-2021-02-23 Elsevier.FNC.future.nets #deadlines due:2021-03-19
-2021-02-23 IFIP.TMA.traffic.measure.annal #deadlines due:2021-03-19
-2021-02-23 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
-2021-02-23 香川大学・創造工学部 准教授・講師または助教の公募（情報通信コース） #jobhunt due:2021-03-19
-2021-02-23 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
-2021-02-23 名古屋大学大学院工学研究科・情報・通信工学専攻 #jobhunt due:2021-03-22
-2021-02-23 IFIP.future.internet.transport #deadlines due:2021-03-25
-2021-02-23 adobe @ work, home #longterm due:2021-03-25
-2021-02-23 windows auth @ zaniya #longterm due:2021-03-25
-2021-02-23 IEEE.DCOSS.urban.computing #deadlines due:2021-03-26
-2021-02-23 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
-2021-02-23 (J)JNSM.beyond5G #deadlines due:2021-03-30
-2021-02-23 IEEE.ATC.trusted.computing #deadlines due:2021-03-30
-2021-02-23 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
-2021-02-23 (J)ACMtran.comp.ling.multimedia.IoT #deadlines due:2021-03-31
-2021-02-23 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
-2021-02-23 (J)Elsevier.smart.veh.in.6G #deadlines due:2021-03-31
-2021-02-23 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
-2021-02-23 BRAINS.blockchain #deadlines due:2021-03-31
-2021-02-23 名古屋大学・大学院工学研究科・教授公募・情報学 #jobhunt due:2021-03-31
-2021-02-23 名古屋大学・知能情報学分野 #jobhunt due:2021-03-31
-2021-02-23 東京工業大学・応用数理分野 #jobhunt due:2021-03-31
-2021-02-23 清水建設株式会社・民間企業の研究員（３D計測技術・ロボティクス） #jobhunt due:2021-03-31
-2021-02-23 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
-2021-02-23 鳥取大学工学部教員公募（ロボティクス） #jobhunt due:2021-03-31
-2021-02-23 (J)MDPI.ai.things.readtime.datamon #deadlines due:2021-04-01
-2021-02-23 (J)TNSM.AI4network #deadlines due:2021-04-01
-2021-02-23 ITC.teletraffic.congress #deadlines due:2021-04-02
-2021-02-23 (J)IEEE.VTechMag.6gapps #deadlines due:2021-04-05
-2021-02-23 関西大学・ソフトウェア工学 #jobhunt due:2021-04-12
-2021-02-23 EAI.MONAMI.japan.mobile.nets #deadlines due:2021-04-13
-2021-02-23 (J)MDPI.sensors.intelligent.vehicles #deadlines due:2021-04-15
-2021-02-23 GLOBECOM #deadlines due:2021-04-15
-2021-02-23 bestat株式会社・技術責任者・CTO #jobhunt due:2021-04-15
-2021-02-23 東京都市大学・経営情報システム #jobhunt due:2021-04-16
-2021-02-23 東北大学・情報リテラシー論分野 #jobhunt due:2021-04-22
-2021-02-23 群馬大学・情報通信分野 #jobhunt due:2021-04-23
-2021-02-23 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
-2021-02-23 東京工科大学コンピュータサイエンス学部・人工知能 #jobhunt due:2021-04-26
-2021-02-23 山口大学・電気電子工学分野 #jobhunt due:2021-04-30
-2021-02-23 岩手大学・知能・メディア情報コース 准教授公募（知能情報学関連分野） #jobhunt due:2021-04-30
-2021-02-23 知能情報学関連分野 #jobhunt due:2021-04-30
-2021-02-23 ACM.GoodIT #deadlines due:2021-05-01
-2021-02-23 (J)tailor.digitaltwin #deadlines due:2021-05-05
-2021-02-23 滋賀県立大学・知能情報工学分野 #jobhunt due:2021-05-07
-2021-02-23 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
-2021-02-23 ACM.middleware #deadlines due:2021-05-15
-2021-02-23 (J)wiley.SPE.highperfcomp.apps #deadlines due:2021-05-31
-2021-02-23 株式会社ヒューマノーム研究所(5jobs) #jobhunt due:2021-05-31
-2021-02-23 青山学院大学理工学部電気電子工学科 #jobhunt due:2021-05-31
-2021-02-23 (J)MDPI.cloud.based.iot.smartcities #deadlines due:2021-06-01
-2021-02-23 ⒿMDPI.HPC.math #deadlines due:2021-06-30
-2021-02-23 トヨタ自動車株式会社・スマートシティプラットフォームの開発 #jobhunt due:2021-06-30
-2021-02-23 株式会社キーウォーカー【AI企業】自然言語処理研究員・エンジニア募集 #jobhunt due:2021-06-30
-2021-02-23 (J)MDPI.energy.in.networks #deadlines due:2021-07-01
-2021-02-23 能美防災株式会社・センサシステムに関するソフトウェアの製品開発業務 #jobhunt due:2021-07-18
-2021-02-23 能美防災株式会社・センサ応用製品に関する研究開発業務 #jobhunt due:2021-07-19
-2021-02-23 (J)BigDataJournal.perfmanagment.large.clusters #deadlines due:2021-07-31
-2021-02-23 株式会社iMedTechnologies・リードAIエンジニア #jobhunt due:2021-07-31
-2021-02-23 ★株式会社アラヤ・リサーチャー (強化学習) #jobhunt due:2021-08-31
-2021-02-23 ★株式会社アラヤ・計算論的神経科学者・情報理論学者 #jobhunt due:2021-08-31
+2021-02-24 <strike>龍谷大.通信工学分野</strike> #jobhunt due:2020-06-01
+2021-02-24 <strike>拓殖大.ソフトウェア工学</strike> #jobhunt due:2020-06-26
+2021-02-24 <strike>同志社大</strike> #jobhunt due:2020-07-15
+2021-02-24 <strong>中央大</strong> #jobhunt due:2020-07-15
+2021-02-24 <strike>千葉商科大.情報・メディア</strike> #jobhunt due:2020-07-17
+2021-02-24 <strike>千葉商科大</strike> #jobhunt due:2020-07-17
+2021-02-24 <strike>近畿大情報セキュリティ評価✘推薦書</strike> #jobhunt due:2020-07-20
+2021-02-24 <strike>東京大(missed13日締切)</strike> #jobhunt due:2020-07-21
+2021-02-24 <strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike> #fundhunt due:2020-07-22
+2021-02-24 <strike>慶應義塾.情報工学分野✘推薦書</strike> #jobhunt due:2020-07-24
+2021-02-24 <strong>滋賀大✌email↓rejectletter</strong> #jobhunt due:2020-07-30
+2021-02-24 <strike>九州国際大.情報学基礎✘badformat</strike> #jobhunt due:2020-07-31
+2021-02-24 <strike>岡山理科大(ous).人工知能✘toomuchwork+morelater</strike> #jobhunt due:2020-07-31
+2021-02-24 <strike>法政大.信号処理、統計、計測、機械学習分野✘推薦書</strike> #jobhunt due:2020-07-31
+2021-02-24 <strong>名古屋大.人間情報学★教授</strong> #jobhunt due:2020-07-31
+2021-02-24 <strong>埼玉工業大.情報学★エクセル業績</strong> #jobhunt due:2020-07-31
+2021-02-24 <strike>国土技術政策総合研究所・データ結合999.999.999千円</strike> #fundhunt due:2020-08-05
+2021-02-24 <strong>三重大.知能工学講座・データサイエンス2jobs</strong> #jobhunt due:2020-08-12
+2021-02-24 <strike>NAIST.ロボティクス分野</strike> #jobhunt due:2020-08-17
+2021-02-24 <strong>筑波大</strong> #jobhunt due:2020-08-17
+2021-02-24 <strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs✘推薦書</strike> #jobhunt due:2020-08-19
+2021-02-24 <strong>岡山県立大.知覚情報処理</strong> #jobhunt due:2020-08-19
+2021-02-24 <strong>玉川大学.国際教養学科✌jrec</strong> #jobhunt due:2020-08-21
+2021-02-24 <strong>龍谷大学・通信工学分野★給料明記</strong> #jobhunt due:2020-08-21
+2021-02-24 <strong>中京大.コンピュータ処理論及び関連科目</strong> #jobhunt due:2020-08-24
+2021-02-24 <strike>日本大.ロボット・制御✘mismatch</strike> #jobhunt due:2020-08-25
+2021-02-24 <strong>大阪大学.社会イノベーション部門</strong> #jobhunt due:2020-08-25
+2021-02-24 <strike>和光大学.情報の基礎✖too much work</strike> #jobhunt due:2020-08-28
+2021-02-24 <strong>広島工業大・経営情報システム✌jrec</strong> #jobhunt due:2020-08-28
+2021-02-24 <strike>京都大.通信情報システム中✘試用</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>岡山理科大(ous).情報数理.情報工学.2posts✘(still)toomuchwork</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>工学院大学.情報学フロンティア-情報学✘推薦書</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>工学院大学.複合領域-デザイン学-総合理工-計算科学</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>日本工業大✘推薦書</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>東京都市大学・経営情報システム</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>東京都立大.情報学基礎.2posts</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>東京電機大.人間情報学✘推薦書</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>株式会社Nextremer.計算科学.quantum</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>滋賀県立大.センシング工学分野</strike> #jobhunt due:2020-08-31
+2021-02-24 <strike>般社団法人CRD</strike> #jobhunt due:2020-08-31
+2021-02-24 <strong>大阪大.情報科学☢試用6カ月✌jrec</strong> #jobhunt due:2020-08-31
+2021-02-24 <strong>岡山大学.サイバーフィジカル情報の応用研究</strong> #jobhunt due:2020-08-31
+2021-02-24 <strong>東京都市大学・情報学</strong> #jobhunt due:2020-08-31
+2021-02-24 <strong>立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース★english</strong> #jobhunt due:2020-08-31
+2021-02-24 <strong>駒澤大.情報分野✌jrec</strong> #jobhunt due:2020-08-31
+2021-02-24 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2021-02-24 <strike>明治大✘推薦書</strike> #jobhunt due:2020-09-07
+2021-02-24 <strike>公立はこだて未来大</strike> #jobhunt due:2020-09-10
+2021-02-24 <strike>広島工業大学・情報ネットワーク(did.not.make.it)</strike> #jobhunt due:2020-09-10
+2021-02-24 <strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong> #jobhunt due:2020-09-10
+2021-02-24 <strike>北海道.情報科学研究院</strike> #jobhunt due:2020-09-11
+2021-02-24 <strike>明治大学・統計科学・統計数学・知能情報科学</strike> #jobhunt due:2020-09-11
+2021-02-24 <strong>★金沢大学.IoT及び情報通信分野</strong> #jobhunt due:2020-09-11
+2021-02-24 <strong>法政大学.情報科学部コンピュータ科学科✌freeform✌jrecin</strong> #jobhunt due:2020-09-11
+2021-02-24 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2021-02-24 <strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike> #jobhunt due:2020-09-14
+2021-02-24 <strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike> #jobhunt due:2020-09-14
+2021-02-24 <strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong> #jobhunt due:2020-09-14
+2021-02-24 <strike>岡山大学.ハードウェア.ソフトウェア</strike> #jobhunt due:2020-09-15
+2021-02-24 <strong>青山学院大.情報社会科学✌freeform</strong> #jobhunt due:2020-09-15
+2021-02-24 <strike>京都先端科学大学・統計やビジネスデータの見方</strike> #jobhunt due:2020-09-18
+2021-02-24 <strike>東京電機大学・情報学部門</strike> #jobhunt due:2020-09-18
+2021-02-24 <strong>▲長岡技術科学大.情報・経営システム工学専攻</strong> #jobhunt due:2020-09-18
+2021-02-24 <strike>松本大学.データサイエンス.情報学-データサイエンス</strike> #jobhunt due:2020-09-20
+2021-02-24 <strike>法政大学.情報学・計算基盤(picked.another.200911)</strike> #jobhunt due:2020-09-21
+2021-02-24 <strike>岐阜聖徳学園大学・情報学</strike> #jobhunt due:2020-09-23
+2021-02-24 <strike>▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野☢福島</strike> #jobhunt due:2020-09-25
+2021-02-24 <strike>★東京理科大.数理モデリング、知能数理分野</strike> #jobhunt due:2020-09-25
+2021-02-24 <strike>岩手県立大.人工知能コース</strike> #jobhunt due:2020-09-25
+2021-02-24 <strike>東京大学.高性能計算地球科学分野</strike> #jobhunt due:2020-09-25
+2021-02-24 <strong>▲成蹊大学.総合理工-計算科学-数物系科学</strong> #jobhunt due:2020-09-25
+2021-02-24 <strike>岡山大学・知能機械システム学講座</strike> #jobhunt due:2020-09-28
+2021-02-24 <strike>▲成蹊大.計算科学(1of2)</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>▲静岡理工科大学.電子情報分野(smalluni)</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>兵庫県立大学.AI・IoT・ビックデータ</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>兵庫県立大学・情報通信工学</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>北海道大学.数理科学・応用数学分野</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>名城大学・情報学、統計学、フィールド調査</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>岡山大学・電気電子機能開発・powerelec</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike> #jobhunt due:2020-09-30
+2021-02-24 <strike>熊本大学・ビッグデータ</strike> #jobhunt due:2020-09-30
+2021-02-24 <strong>‼★公立はこだて未来大学・情報システム</strong> #jobhunt due:2020-09-30
+2021-02-24 <strong>▲東京都市大学・情報理論</strong> #jobhunt due:2020-09-30
+2021-02-24 <strong>★龍谷大学・情報科学分野</strong> #jobhunt due:2020-09-30
+2021-02-24 <strong>福岡大.情報学</strong> #jobhunt due:2020-09-30
+2021-02-24 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2021-02-24 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2021-02-24 <strike>明星大.データアナリティクス✘推薦書</strike> #jobhunt due:2020-10-02
+2021-02-24 <strike>東洋大学・情報社会の総合政策</strike> #jobhunt due:2020-10-08
+2021-02-24 <strike>立命館大学.システム制御工学.無線通信・電波</strike> #jobhunt due:2020-10-09
+2021-02-24 <strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike> #jobhunt due:2020-10-12
+2021-02-24 <strike>FIT.制御・計測に関連する分野</strike> #jobhunt due:2020-10-16
+2021-02-24 <strike>大阪大学大学院・情報科学研究科✘probation</strike> #jobhunt due:2020-10-16
+2021-02-24 <strike>愛知工科大学・組込み系システム</strike> #jobhunt due:2020-10-16
+2021-02-24 <strike>東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</strike> #jobhunt due:2020-10-16
+2021-02-24 <strike>石川県工業試験場・電気職</strike> #jobhunt due:2020-10-16
+2021-02-24 <strong>千葉経済大学・情報学分野</strong> #jobhunt due:2020-10-16
+2021-02-24 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
+2021-02-24 <strong>玉川大学・ソフトウェアサイエンス学科</strong> #jobhunt due:2020-10-19
+2021-02-24 <strike>東京工業大学・情報通信における応用AI分野</strike> #jobhunt due:2020-10-23
+2021-02-24 <strike>成城大学・経営統計学✘bad format</strike> #jobhunt due:2020-10-29
+2021-02-24 <strike>茨城キリスト教大学・経営情報分野</strike> #jobhunt due:2020-10-30
+2021-02-24 <strike>足利大学・人工知能</strike> #jobhunt due:2020-10-30
+2021-02-24 <strike>足利大学・情報工学、情報科学センター</strike> #jobhunt due:2020-10-30
+2021-02-24 <strike>香川大学・機械システム</strike> #jobhunt due:2020-10-30
+2021-02-24 <strike>高知大学・情報工学</strike> #jobhunt due:2020-10-30
+2021-02-24 <strong>公立小松大学・データマイニング・機械学習・データ科学関連分野</strong> #jobhunt due:2020-10-30
+2021-02-24 <strong>福岡工業大</strong> #jobhunt due:2020-10-30
+2021-02-24 <strike>久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械</strike> #jobhunt due:2020-11-04
+2021-02-24 <strong>お茶の水女子大学・人間工学（ロボット工学、生体工学）</strong> #jobhunt due:2020-11-04
+2021-02-24 <strong>名古屋市立大学・情報環境デザイン領域</strong> #jobhunt due:2020-11-05
+2021-02-24 <strike>近畿大学・情報セキュリティ教育(講師or助教)</strike> #jobhunt due:2020-11-06
+2021-02-24 <strike>三重大学大学院工学研究科・知能工学講座★再公募</strike> #jobhunt due:2020-11-09
+2021-02-24 <strike>公立千歳科学技術大学・情報システム工学科(任期)</strike> #jobhunt due:2020-11-10
+2021-02-24 <strike>香川大学・情報システム・セキュリティコース✘講師以下</strike> #jobhunt due:2020-11-13
+2021-02-24 <strike>白百合女子大学・情報教育・プログラミング教育・ICT教育‼調布・推薦</strike> #jobhunt due:2020-11-14
+2021-02-24 <strike>滋賀県立大学・知能情報工学分野・データサイエンス‼エクセルCV</strike> #jobhunt due:2020-11-18
+2021-02-24 <strike>岡山理科大学・計算機工学・コンピュータシステム分野✘toomuchwork</strike> #jobhunt due:2020-11-20
+2021-02-24 <strike>香川大学・情報通信コース</strike> #jobhunt due:2020-11-20
+2021-02-24 <strike>広島大学・情報メディア教育研究センター</strike> #jobhunt due:2020-11-24
+2021-02-24 <strike>九州大学・ロシア語担当</strike> #jobhunt due:2020-11-26
+2021-02-24 <strike>京都大学・国際高等教育院附属データ科学イノベーション教育研究センター</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>信州大学.通信システム分野(助教)</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>名古屋商科大学・情報(nolab)</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>岐阜大学・数理・データサイエンス</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>岡山理科大学・データサイエンス</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>東京大学・人間エネルギー環境学分野</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>金沢大学・先端科学・社会共創推進機構</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>金沢大学・先端科学・社会共創推進機構・人材育成グループ</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>長岡技術科学大学・情報・経営システム工学(better.at.1204)</strike> #jobhunt due:2020-11-30
+2021-02-24 <strike>東京工業大学・ソフトウェア工学分野</strike> #jobhunt due:2020-12-01
+2021-02-24 <strike>広島工業大学・コンピュータシステム</strike> #jobhunt due:2020-12-03
+2021-02-24 <strike>岩手大学・情報基盤センター</strike> #jobhunt due:2020-12-04
+2021-02-24 <strong>九州国際大学・ビジネスデータ分析</strong> #jobhunt due:2020-12-04
+2021-02-24 <strong>長岡技術科学大学・情報通信制御システム工学講座</strong> #jobhunt due:2020-12-04
+2021-02-24 <strike>東京都市大学・情報科学科・計算機工学分野</strike> #jobhunt due:2020-12-05
+2021-02-24 <strike>東京電機大学・情報システムデザイン</strike> #jobhunt due:2020-12-05
+2021-02-24 <strike>神奈川工科大学・情報学部・情報メディア学科</strike> #jobhunt due:2020-12-06
+2021-02-24 <strike>データ同化研究チーム</strike> #jobhunt due:2020-12-08
+2021-02-24 <strike>名古屋大学・システム研究所未来エレクトロニクス集積研究センター</strike> #jobhunt due:2020-12-09
+2021-02-24 <strike>九州産業大学理工学部・機械工学科・メカトロニクス</strike> #jobhunt due:2020-12-11
+2021-02-24 <strike>東京通信大学・情報システム分野</strike> #jobhunt due:2020-12-14
+2021-02-24 <strike>静岡理工科大学・電子情報分野</strike> #jobhunt due:2020-12-14
+2021-02-24 <strike>琉球大学・総合情報処理センター</strike> #jobhunt due:2020-12-15
+2021-02-24 <strike>千葉大学・情報工学・画像工学・医工学</strike> #jobhunt due:2020-12-16
+2021-02-24 <strike>NAIST・情報科学領域・コンピューティング・アーキテクチャ分野</strike> #jobhunt due:2020-12-18
+2021-02-24 <strike>立正大学・環境情報学・環境科学分野</strike> #jobhunt due:2020-12-18
+2021-02-24 <strike>東日本国際大学・情報学</strike> #jobhunt due:2020-12-30
+2021-02-24 <strike>リージョナルフィッシュ株式会社・ゲノム編集水産育種のバイオインフォマティクス研究員の募集【リモートワーク可】</strike> #jobhunt due:2020-12-31
+2021-02-24 <strike>足利大学工学部・機械分野【再公募】</strike> #jobhunt due:2021-01-08
+2021-02-24 <strike>新潟大学・システムソフトウェア・並列分散処理</strike> #jobhunt due:2021-01-14
+2021-02-24 <strike>東京工業大学・理論計算機科学・サイバーセキュリティ分野</strike> #jobhunt due:2021-01-17
+2021-02-24 <strike>足利大学・工学部・教員の公募（人工知能関連分野）【再公募】</strike> #jobhunt due:2021-01-29
+2021-02-24 <strike>足利大学・工学部・教員の公募（情報工学、情報科学センター）【再公募】</strike> #jobhunt due:2021-01-29
+2021-02-24 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
+2021-02-24 <strike>金城学院大学・生活環境学部生活マネジメント学科・専任教員の公募（情報学）</strike> #jobhunt due:2021-02-01
+2021-02-24 <strike>静岡理工科大学・講師・准教授・または教授の公募（電子機械制御分野）</strike> #jobhunt due:2021-02-01
+2021-02-24 ●静岡理工科大学（ソフトウェア開発を基盤とする、知能情報や感性情報処理に関連する分野） #jobhunt due:2021-02-01
+2021-02-24 <strike>日本大学・専任教員（教授）の公募（データサイエンス関連科目）</strike> #jobhunt due:2021-02-05
+2021-02-24 <strong>名古屋大学・行動信号処理分野</strong> #jobhunt due:2021-02-05
+2021-02-24 <strike>東京工業大学・教授の公募（ソフトウェア工学分野）</strike> #jobhunt due:2021-02-09
+2021-02-24 <strong>中央学院大学・情報数学他</strong> #jobhunt due:2021-02-12
+2021-02-24 (J)MDPI.electronics.deepleaning #deadlines due:2021-02-15
+2021-02-24 (J)MDPI.sensors.internet.of.things #deadlines due:2021-02-15
+2021-02-24 EAI.WiCOM.wireless #deadlines due:2021-02-15
+2021-02-24 IEEE.ACM.IWQoS.qos #deadlines due:2021-02-15
+2021-02-24 IEEE.HPSC.highperfcomp #deadlines due:2021-02-15
+2021-02-24 IEEE.IDS.intelligent.data.sec #deadlines due:2021-02-15
+2021-02-24 IEEE.ISIE.industry.electronics #deadlines due:2021-02-15
+2021-02-24 IEEE.COMPSAC #deadlines due:2021-02-18
+2021-02-24 IEEE.DDINS.datadriven #deadlines due:2021-02-19
+2021-02-24 (J)JCN.covid19 #deadlines due:2021-02-20
+2021-02-24 (J)MDPI.smartcities.traffic.sensors.IoT #deadlines due:2021-02-20
+2021-02-24 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
+2021-02-24 (J)MDPI.mobile.computing #deadlines due:2021-02-21
+2021-02-24 IEEE.ComSoc.CQR.quality.reliablity #deadlines due:2021-02-21
+2021-02-24 IEEE.SECON.sensing.comm.net #deadlines due:2021-02-22
+2021-02-24 LANMAN.networking.is.new.normal #deadlines due:2021-02-22
+2021-02-24 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2021-02-24
+2021-02-24 kindle #current due:2021-02-24
+2021-02-24 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2021-02-24
+2021-02-24 wifi dongle @ home #current due:2021-02-24
+2021-02-24 <strike>大阪大学・機械工学・情報学</strike> #jobhunt due:2021-02-25
+2021-02-24 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
+2021-02-24 <strike>●大和大学（3jobs）</strike> #jobhunt due:2021-02-26
+2021-02-24 #jobhunt due:2021-02-28
+2021-02-24 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
+2021-02-24 <strike>株式会社ベイシスコンサルティング・リサーチャー募集</strike> #jobhunt due:2021-02-28
+2021-02-24 <strike>武庫川女子大学・情報セキュリティ分野</strike> #jobhunt due:2021-02-28
+2021-02-24 <strike>武庫川女子大学・経営情報分野</strike> #jobhunt due:2021-02-28
+2021-02-24 <strong>岩手大学・知能・メディア情報コース・准教授公募</strong> #jobhunt due:2021-02-28
+2021-02-24 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
+2021-02-24 ★online京都情報大学院大学・情報学分野 #jobhunt due:2021-02-28
+2021-02-24 ★online国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
+2021-02-24 ★online東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
+2021-02-24 (J)IEET.green.internet.and.services #deadlines due:2021-03-01
+2021-02-24 (J)Springer.queueing.learning.control #deadlines due:2021-03-01
+2021-02-24 <strike>東京国際工科専門職大学・プログラミング関連</strike> #jobhunt due:2021-03-01
+2021-02-24 <strike>東京国際工科専門職大学・通信・コンピュータ分野</strike> #jobhunt due:2021-03-01
+2021-02-24 <strike>盛岡大学・情報処理</strike> #jobhunt due:2021-03-01
+2021-02-24 IEEE.IFIP.wirelessdays #deadlines due:2021-03-01
+2021-02-24 Springer.dataintensive.cluster #deadlines due:2021-03-01
+2021-02-24 (3) docomocycle data collect #regulars due:2021-03-03
+2021-02-24 ① money (weekly) #regulars due:2021-03-03
+2021-02-24 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2021-03-03
+2021-02-24 IEEE.ISIE.industry.elec #deadlines due:2021-03-05
+2021-02-24 audio automation for open campus #midterm due:2021-03-06
+2021-02-24 kgu zemi faces #midterm due:2021-03-06
+2021-02-24 samsung redo cygwin #midterm due:2021-03-06
+2021-02-24 simplify yalms #midterm due:2021-03-06
+2021-02-24 tokyo hotels and schedule #midterm due:2021-03-06
+2021-02-24 video recognition engine (sotsuken) #midterm due:2021-03-06
+2021-02-24 Ｍ・Ｓ・Ｋ株式会社・ソフトウェア開発部.GPS通信機器 #jobhunt due:2021-03-09
+2021-02-24 IEEE.FiCloud.iot.cloud #deadlines due:2021-03-10
+2021-02-24 LNCS.mobiwis.mobileweb.intelligentsystems #deadlines due:2021-03-10
+2021-02-24 ficloud.future.cloud #deadlines due:2021-03-10
+2021-02-24 サイエンス・テクノロジー・システムズ株式会社・サイエンティフィック コンサルタント #jobhunt due:2021-03-10
+2021-02-24 公益社団法人国際経済労働研究所・データ分析研究員募集 #jobhunt due:2021-03-11
+2021-02-24 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
+2021-02-24 (J)IEEEWComm.AI.assisted.wcomm #deadlines due:2021-03-15
+2021-02-24 (J)MDPI.drone.swarms #deadlines due:2021-03-15
+2021-02-24 CloudConf.KSEM@tokyo #deadlines due:2021-03-15
+2021-02-24 KSEM.knowledge #deadlines due:2021-03-15
+2021-02-24 神奈川工科大学・情報学部・情報工学科 #jobhunt due:2021-03-15
+2021-02-24 ACM.WiSec.wireless.security #deadlines due:2021-03-18
+2021-02-24 Elsevier.FNC.future.nets #deadlines due:2021-03-19
+2021-02-24 IFIP.TMA.traffic.measure.annal #deadlines due:2021-03-19
+2021-02-24 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
+2021-02-24 香川大学・創造工学部 准教授・講師または助教の公募（情報通信コース） #jobhunt due:2021-03-19
+2021-02-24 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
+2021-02-24 名古屋大学大学院工学研究科・情報・通信工学専攻 #jobhunt due:2021-03-22
+2021-02-24 IFIP.future.internet.transport #deadlines due:2021-03-25
+2021-02-24 IEEE.DCOSS.urban.computing #deadlines due:2021-03-26
+2021-02-24 adobe @ work, home #longterm due:2021-03-26
+2021-02-24 windows auth @ zaniya #longterm due:2021-03-26
+2021-02-24 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
+2021-02-24 (J)JNSM.beyond5G #deadlines due:2021-03-30
+2021-02-24 IEEE.ATC.trusted.computing #deadlines due:2021-03-30
+2021-02-24 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
+2021-02-24 (J)ACMtran.comp.ling.multimedia.IoT #deadlines due:2021-03-31
+2021-02-24 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
+2021-02-24 (J)Elsevier.smart.veh.in.6G #deadlines due:2021-03-31
+2021-02-24 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
+2021-02-24 BRAINS.blockchain #deadlines due:2021-03-31
+2021-02-24 名古屋大学・大学院工学研究科・教授公募・情報学 #jobhunt due:2021-03-31
+2021-02-24 名古屋大学・知能情報学分野 #jobhunt due:2021-03-31
+2021-02-24 東京工業大学・応用数理分野 #jobhunt due:2021-03-31
+2021-02-24 清水建設株式会社・民間企業の研究員（３D計測技術・ロボティクス） #jobhunt due:2021-03-31
+2021-02-24 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
+2021-02-24 鳥取大学工学部教員公募（ロボティクス） #jobhunt due:2021-03-31
+2021-02-24 (J)MDPI.ai.things.readtime.datamon #deadlines due:2021-04-01
+2021-02-24 (J)TNSM.AI4network #deadlines due:2021-04-01
+2021-02-24 ITC.teletraffic.congress #deadlines due:2021-04-02
+2021-02-24 (J)IEEE.VTechMag.6gapps #deadlines due:2021-04-05
+2021-02-24 関西大学・ソフトウェア工学 #jobhunt due:2021-04-12
+2021-02-24 EAI.MONAMI.japan.mobile.nets #deadlines due:2021-04-13
+2021-02-24 (J)MDPI.sensors.intelligent.vehicles #deadlines due:2021-04-15
+2021-02-24 GLOBECOM #deadlines due:2021-04-15
+2021-02-24 bestat株式会社・技術責任者・CTO #jobhunt due:2021-04-15
+2021-02-24 東京都市大学・経営情報システム #jobhunt due:2021-04-16
+2021-02-24 東北大学・情報リテラシー論分野 #jobhunt due:2021-04-22
+2021-02-24 群馬大学・情報通信分野 #jobhunt due:2021-04-23
+2021-02-24 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
+2021-02-24 東京工科大学コンピュータサイエンス学部・人工知能 #jobhunt due:2021-04-26
+2021-02-24 山口大学・電気電子工学分野 #jobhunt due:2021-04-30
+2021-02-24 岩手大学・知能・メディア情報コース 准教授公募（知能情報学関連分野） #jobhunt due:2021-04-30
+2021-02-24 知能情報学関連分野 #jobhunt due:2021-04-30
+2021-02-24 ACM.GoodIT #deadlines due:2021-05-01
+2021-02-24 (J)tailor.digitaltwin #deadlines due:2021-05-05
+2021-02-24 滋賀県立大学・知能情報工学分野 #jobhunt due:2021-05-07
+2021-02-24 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
+2021-02-24 ACM.middleware #deadlines due:2021-05-15
+2021-02-24 (J)wiley.SPE.highperfcomp.apps #deadlines due:2021-05-31
+2021-02-24 株式会社ヒューマノーム研究所(5jobs) #jobhunt due:2021-05-31
+2021-02-24 青山学院大学理工学部電気電子工学科 #jobhunt due:2021-05-31
+2021-02-24 (J)MDPI.cloud.based.iot.smartcities #deadlines due:2021-06-01
+2021-02-24 ⒿMDPI.HPC.math #deadlines due:2021-06-30
+2021-02-24 トヨタ自動車株式会社・スマートシティプラットフォームの開発 #jobhunt due:2021-06-30
+2021-02-24 株式会社キーウォーカー【AI企業】自然言語処理研究員・エンジニア募集 #jobhunt due:2021-06-30
+2021-02-24 (J)MDPI.energy.in.networks #deadlines due:2021-07-01
+2021-02-24 能美防災株式会社・センサシステムに関するソフトウェアの製品開発業務 #jobhunt due:2021-07-18
+2021-02-24 能美防災株式会社・センサ応用製品に関する研究開発業務 #jobhunt due:2021-07-19
+2021-02-24 (J)BigDataJournal.perfmanagment.large.clusters #deadlines due:2021-07-31
+2021-02-24 株式会社iMedTechnologies・リードAIエンジニア #jobhunt due:2021-07-31
+2021-02-24 ★株式会社アラヤ・リサーチャー (強化学習) #jobhunt due:2021-08-31
+2021-02-24 ★株式会社アラヤ・計算論的神経科学者・情報理論学者 #jobhunt due:2021-08-31
